@startuml
'https://plantuml.com/class-diagram

skinparam dpi 600
hide circle
skinparam classAttributeIconSize 0

abstract class Item  << abstract >>{
    -id
    - name
    - unitPrice

    + Item (id: String, name: String, unitPrice: double)
    +getID() : String
    +getName() : String
    +getPrice() : double

}
interface ItemManager << interface >>{
    add(var1: MenuItem) : boolean
    remove(var1: String) : boolean
    getID() : String
}
class Menu {
- logr
- menuID
- menuItemList
- setupLogger() : void
+ Menu(menuID: String)
+ getItemByID(itemID: String) : Optional<MenuItem>
+ getItemByName(itemName: String) : Optional<MenuItem>
+ getMenuItemList() : ArrayList<MenuItem>
+ getSize() : int
+ getMenuSummary() : String
+ getID() : String
+ add(item: MenuItem) : boolean
+ remove(itemID: String) : boolean
+ toString() : String
}
class MenuItem {
+ MenuItem(id: String, name: String, unitPrice: double)
+ toString(): String
+ compareTo(o: MenuItem) : int
}
class Order {
- SERVICE_CHARGE
- GST
- orderID
- restaurantName
- restaurantAddress
- orderType
- userName
- orderItemList
+ add(item: MenuItem) : boolean
+ remove(itemID: String) : boolean
+ remove(item: MenuItem) : boolean
+ getItemCount(itemID String): int
+ getID() : String
+ getSize() : int
+ getTotalPrice() : double
+ getReceipt() : String
+ getRestaurantName() : String
+ getRestaurantAddress() : String
+ getUserName() : String
+ getOrderType() : String
+ getOrderItemList() : ArrayList<MenuItem>
+ getOrderSummary() : String
+ toString() : String
}

Item <|-- MenuItem

ItemManager <|.. Menu
ItemManager <|.. Order

MenuItem "1..*" --* Order
MenuItem "1..*" -* Menu




@enduml